<resources>
    <string name="app_name">ImproveDemo</string>
    <string name="scheme">xiaobing</string>
    <string name="ID_01_01">主页</string>
    <string name="ID_design_01">Design</string>
    <string name="ID_design_01_02">复选分组列表</string>
    <string name="ID_design_02_01">可收起的分组选择列表</string>
    <string name="ID_design_02_02">可展开/收起的列表</string>
    <string name="ID_design_02_03">可展开/收起的列表2</string>
    <string name="ID_notification_01">通知</string>
    <string name="ID_notification_01_02">普通通知</string>
    <string name="ID_notification_01_03">折叠式通知</string>
    <string name="ID_notification_01_04">悬挂式通知</string>
    <string name="ID_io_01_01">读取</string>
    <string name="ID_io_01_02">写入</string>
    <string name="ID_io_01_03">读取SD</string>
    <string name="ID_io_01_04">写入SD</string>
    <string name="ID_rx_01_01">RxJava测试页</string>
    <string name="ID_rx_01_02">发射数据</string>
    <string name="ID_rx_01_03">操作符:map</string>
    <string name="ID_rx_01_04">操作符:concat</string>
    <string name="ID_rx_01_05">操作符:flatMap</string>
    <string name="ID_rx_01_06">操作符:zip</string>
    <string name="ID_rx_01_07">操作符:interval</string>
    <string name="ID_rx_01_08">操作符:Flowable  map </string>
    <string name="ID_rx_01_09">操作符:Flowable concat</string>
    <string name="ID_rx_01_10">操作符:Flowable flatMap</string>
    <string name="ID_rx_01_11">操作符:Flowable zip</string>
    <string name="ID_rx_01_12">操作符:Flowable interval</string>
    <string name="ID_rx_01_13">操作符:interval</string>
    <string name="ID_map_01_01">地图</string>
    <string name="ID_map_01_02">描点</string>
    <string name="ID_map_01_03">画线</string>
    <string name="ID_map_01_04">划面</string>
    <string name="ID_animation_main_01">动画主页</string>
    <string name="ID_animation_open_book">书籍打开动画</string>
    <string name="ID_span_title">Span富文本</string>
    <string name="ID_span_hint">请输入文字</string>
    <string name="ID_span_01">ForegroundColorSpan</string>
    <string name="ID_span_02">BackgroundColorSpan</string>
    <string name="ID_span_03">ClickableSpan</string>
    <string name="ID_span_04">MaskFilterSpan</string>
    <string name="ID_span_05">StrikethroughSpan</string>
    <string name="ID_span_06">UnderlineSpan</string>
    <string name="ID_span_07">AbsoluteSizeSpan</string>
    <string name="ID_span_08">DynamicDrawableSpan</string>
    <string name="ID_span_09">ImageSpan</string>
    <string name="ID_span_10">RelativeSizeSpan</string>
    <string name="ID_span_11">ScaleXSpan</string>
    <string name="ID_span_12">StyleSpan</string>
    <string name="ID_span_13">SuperscriptSpan</string>
    <string name="ID_span_14">TextAppearanceSpan</string>
    <string name="ID_span_15">TypefaceSpan</string>
    <string name="ID_span_16">URLSpan</string>
    <string name="ID_span_17">SubscriptSpan</string>
    <string name="ID_custom_view_main">自定义控件</string>
    <string name="ID_setting_main">跳转系统设置</string>



    <string name="ID_FONT_00">默认字体</string>
    <string name="ID_FONT_01">草檀斋毛泽东字体</string>
    <string name="ID_FONT_03">叶根友行书繁</string>
    <string name="ID_FONT_04">金梅毛行書</string>
    <string name="ID_FONT_05">金梅新毛筆行書</string>


</resources>
