<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/head" />


    <Button
        android:id="@+id/bt_read"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ID_io_01_01"/>
    <Button
        android:id="@+id/bt_write"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ID_io_01_02"/>
    <Button
        android:id="@+id/bt_read_sd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ID_io_01_03"/>
    <Button
        android:id="@+id/bt_write_sd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ID_io_01_04"/>
    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/base16sp"
        android:textColor="@android:color/holo_orange_light"
        android:hint="@string/ID_io_01_01"
        android:inputType="text"
        android:minHeight="@dimen/base50dp"/>

    <EditText
        android:id="@+id/et_write"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="@dimen/base16sp"
        android:hint="@string/ID_io_01_02"
        android:inputType="text"
        android:minHeight="@dimen/base50dp"/>

</LinearLayout>