<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/head" />

    <TextView
        android:id="@+id/tv_01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base5dp"
        android:background="@drawable/shape_8dp"
        android:gravity="center"
        android:padding="@dimen/base5dp"
        android:text="@string/ID_FONT_00"
        android:textSize="@dimen/base16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base5dp"
        android:background="@drawable/shape_8dp"
        android:gravity="center"
        android:padding="@dimen/base5dp"
        android:text="@string/ID_FONT_01"
        android:textAppearance="@style/customFontStyle"
        android:textSize="@dimen/base16sp" />

    <TextView
        android:id="@+id/tv_02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base5dp"
        android:background="@drawable/shape_8dp"
        android:gravity="center"
        android:padding="@dimen/base5dp"
        android:text="@string/ID_FONT_01"
        android:textAppearance="@style/customFontStyle"
        android:textSize="@dimen/base16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base5dp"
        android:background="@drawable/shape_8dp"
        android:gravity="center"
        android:padding="@dimen/base5dp"
        android:text="@string/ID_FONT_03"
        android:textSize="@dimen/base16sp" />

    <TextView
        android:id="@+id/tv_03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base5dp"
        android:background="@drawable/shape_8dp"
        android:gravity="center"
        android:padding="@dimen/base5dp"
        android:text="@string/ID_FONT_03"
        android:textSize="@dimen/base16sp" />

</LinearLayout>